# AxGuard-SDK

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/: CODEOWNERS
axguard-sdk/: build.gradle.kts  consumer-rules.pro
axguard-sdk/api/: axguard-sdk.api
axguard-sdk/src/main/cpp/: CMakeLists.txt  integrity_check.cpp  jni_onload.cpp  obfs.h
axguard-sdk/src/main/cpp/checks/: debugger_check.cpp  hook_check.cpp  native_props.cpp  root_check.cpp  selinux_check.cpp
axguard-sdk/src/main/cpp/common/: jni_targets.h  str_util.h  syscall_io.cpp  syscall_io.h  task_iter.cpp  task_iter.h
axguard-sdk/src/main/java/com/axguard/sdk/api/: AxGuardSdk.kt
axguard-sdk/src/main/java/com/axguard/sdk/api/models/: AxGuardReport.kt  SecurityCheckConfig.kt  SecurityCheckId.kt
axguard-sdk/src/main/java/com/axguard/sdk/api/models/threats/: AdbOverNetworkThreat.kt  AppIntegrityThreat.kt  DebuggerThreat.kt  DeveloperOptionsThreat.kt  DexIntegrityThreat.kt  EmulatorThreat.kt  EncryptionThreat.kt  HookThreat.kt  ProxyThreat.kt  RootThreat.kt  SecurityCheckErrorKind.kt  SecurityCheckResult.kt  SelinuxThreat.kt  UserCaThreat.kt  VerifiedBootThreat.kt  VpnThreat.kt
axguard-sdk/src/main/java/com/axguard/sdk/internal/: AxGuardSdkImpl.kt  ExecutorServiceProvider.kt  NativeLibrary.kt  SecurityCheck.kt  SecurityChecksFactory.kt
axguard-sdk/src/main/java/com/axguard/sdk/internal/checks/: AdbOverNetworkCheck.kt  AppIntegrityCheck.kt  DebuggerCheck.kt  DeveloperOptionsCheck.kt  DexIntegrityCheck.kt  EmulatorCheck.kt  EncryptionCheck.kt  HookCheck.kt  ProxyCheck.kt  RootCheck.kt  SelinuxCheck.kt  UserCaCheck.kt  VerifiedBootCheck.kt  VpnCheck.kt
axguard-sdk/src/main/java/com/axguard/sdk/internal/log/: AxLog.kt
axguard-sdk/src/main/java/com/axguard/sdk/internal/models/: AxGuardReportImpl.kt  TaskDirUnobservableException.kt
axguard-sdk/src/main/java/com/axguard/sdk/internal/models/checks/: AdbOverNetworkThreatImpl.kt  AppIntegrityThreatImpl.kt  DebuggerThreatImpl.kt  DeveloperOptionsThreatImpl.kt  DexIntegrityThreatImpl.kt  EmulatorThreatImpl.kt  EncryptionThreatImpl.kt  HookThreatImpl.kt  ProxyThreatImpl.kt  RootThreatImpl.kt  SecureImpl.kt  SelinuxThreatImpl.kt  UnavailableImpl.kt  UserCaThreatImpl.kt  VerifiedBootThreatImpl.kt  VpnThreatImpl.kt
axguard-sdk/src/main/java/com/axguard/sdk/internal/obfs/: Obfs.kt  ObfuscatedStrings.kt
axguard-sdk/src/main/java/com/axguard/sdk/internal/utils/: AttestationDerParser.kt  KeyAttestationUtil.kt  NativeProps.kt  RuntimeExt.kt  SystemPropertiesUtil.kt  ThrowableExt.kt
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/com/axguard/gradle/config/: AxGuardBuild.kt
build-logic/src/main/kotlin/com/axguard/gradle/dsl/: AxGuardExtension.kt
build-logic/src/main/kotlin/com/axguard/gradle/internal/: DexHashes.kt  Fingerprints.kt
build-logic/src/main/kotlin/com/axguard/gradle/plugin/: AxGuardGradlePlugin.kt  AxGuardLibraryPlugin.kt  DexIntegrityWiring.kt
build-logic/src/main/kotlin/com/axguard/gradle/publishing/: AxGuardPublishPlugin.kt
build-logic/src/main/kotlin/com/axguard/gradle/tasks/: AxGuardCertFingerprintTask.kt  AxGuardConfigurationTask.kt  AxGuardDexHashTask.kt
demo-app/: axguard-key.jks  build.gradle.kts
demo-app/src/androidTest/java/com/earldev/axguard/demo/: ExampleInstrumentedTest.kt
demo-app/src/main/: AndroidManifest.xml
demo-app/src/main/java/com/earldev/axguard/demo/: MainActivity.kt
demo-app/src/main/java/com/earldev/axguard/demo/domain/: SecurityChecker.kt
demo-app/src/main/java/com/earldev/axguard/demo/domain/catalog/: CheckCatalog.kt
demo-app/src/main/java/com/earldev/axguard/demo/domain/model/: CheckMetadata.kt  CheckStatus.kt  ScanSummary.kt  SecurityCheck.kt  SecurityCheckMapper.kt
demo-app/src/main/java/com/earldev/axguard/demo/presentation/: ChecksScreen.kt  ChecksViewModel.kt
demo-app/src/main/java/com/earldev/axguard/demo/presentation/components/: CheckDetailSheet.kt  CheckListItem.kt  ChecksHeader.kt  OverallStatusCard.kt  StatusPill.kt
demo-app/src/main/java/com/earldev/axguard/demo/presentation/models/: CheckRow.kt  ChecksUiState.kt
demo-app/src/main/java/com/earldev/axguard/demo/presentation/theme/: CheckVisuals.kt  Color.kt  StatusColors.kt  Theme.kt  Type.kt
demo-app/src/main/res/drawable/: axguard_mark_ink.xml
demo-app/src/main/res/values/: strings.xml  themes.xml
demo-app/src/test/java/com/earldev/axguard/demo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: gen_obfs.py
